--- a/src/components/header/styles/Header.css
+++ b/src/components/header/styles/Header.css
@@ -10,6 +10,7 @@ display: flex;
 .header__left > img {
     object-fit: contain;
     height: 40px;
+    margin-right: 10px;
 }
 
 .header__search {
@@ -19,6 +20,7 @@ display: flex;
     border-radius: 5px;
     height: 22px;
     color: gray;
+    background-color: #eef3f8;
 }
 
 .header__search > input {
