--- a/src/components/Sidebar/styles/Sidebar.css
+++ b/src/components/Sidebar/styles/Sidebar.css
@@ -11,6 +11,15 @@
     margin-bottom: 10px ;
 }
 
+.sidebar__top > h1 {
+    color: gray;
+    font-size: 12px;
+}
+
+.sidebar__top > h2 {
+    font-size: 18px;
+}
+
 .sidebar__top {
     display: flex;
     flex-direction: column;
@@ -58,4 +67,40 @@
     background-color: white;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+}
+
+.sidebar__bottom {
+    text-align: left;
+    padding: 10px;
+    border: 1px solid lightgray;
+    background-color: white;
+    border-radius: 10px;
+    margin-top: 10px;
+}
+
+.sidebar__bottom > p {
+    font-size: 13px;
+    padding-bottom: 10px;
+}
+
+.sidebar__recentItem {
+    display: flex;
+    font-size: 13px;
+    color: gray;
+    font-weight: bolder;
+    cursor: pointer;
+    margin-bottom: 5px;
+    padding: 5px;
+}
+
+.sidebar__recentItem:hover {
+    background-color: whitesmoke;
+    border-radius: 10px;
+    cursor: pointer;
+    color: black;
+}
+
+.sidebar__hash {
+    margin-right: 10px;
+    margin-left: 5px;
 }
